# WutheringWavesAssistant

./: .gitignore  .gitmodules  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: alpha.yml  release.yml
scripts/: rebuild_conda_env.ps1
src/: application.py
src/config/: app_config.py  config.py  echo_config.py  gui_config.py  keyboard_mapping_config.py  logging_config.py
src/controller/: base_controller.py  main_controller.py
src/core/: contexts.py  injector.py  interface.py  languages.py  pages.py  regions.py  tasks.py
src/gui/: gui.py
src/gui/common/: config.py
src/gui/components/: sample_card.py
src/gui/resource/qss/light/: home_interface.qss  sample_card.qss
src/gui/view/: home_interface.py  main_window.py  setting_interface.py
src/service/: auto_boss_service.py  auto_pickup_service.py  auto_story_service.py  control_service.py  daily_activity_service.py  img_service.py  ocr_service.py  od_service.py  page_event_service.py  window_service.py
src/util/: audio_util.py  dxcam_util.py  file_util.py  hwnd_util.py  img_util.py  keymouse_util.py  mss_util.py  onnx_util.py  paddleocr_util.py  rapidocr_util.py  screenshot_util.py  wrap_util.py  yolo_util.py
